--- a/src/components/TicketModal/styles.module.scss
+++ b/src/components/TicketModal/styles.module.scss
@@ -1,6 +1,7 @@
 .ticket-modal {
     border: .1rem solid grey;
-    width: 35rem;
+    width: 40rem;
+    background-color: white;
     margin-left: auto;
     margin-right: auto;
     flex-shrink: 0;
